...
                android:orientation="vertical"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">


                <RadioButton
                    android:id="@+id/bread"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?attr/textAppearanceBody1"
                    android:text='@{viewModel.menuItems["bread"].name}'
                    tools:text="Accompaniment 1"
                    android:onClick='@{()-> viewModel.setAccompaniment("bread")}'/>
...
                tools:text="Subtotal $5.00"
                android:text="@{@string/subtotal(viewModel.subtotal)}"/>

            <Button
                android:id="@+id/cancel_button"
                style="@style/Widget.Order.Button.Cancel"
                app:layout_constraintEnd_toStartOf="@id/next_button"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/next_button"
                android:onClick="@{()-> fragmentAccompanimentMenu.cancelOrder()}"
                />

            <Button
...
