...

            <RadioGroup
                android:id="@+id/entree_options"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:checkedButton="@id/cauliflower"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <RadioButton
                    android:id="@+id/cauliflower"
                    android:layout_width="wrap_content"
...
